fix: CLIN-1625 update double scroll in variant prescription rqdm

--- a/src/views/Snv/Exploration/Patient/PageContent/tabs/Variants/index.module.scss
+++ b/src/views/Snv/Exploration/Patient/PageContent/tabs/Variants/index.module.scss
@@ -36,6 +36,9 @@
   :global(.ant-table-content) {
     height: 100%;
     min-height: 0;
+  }
+
+  :global(.ant-table-content) {
     overflow: scroll;
   }
 
