--- a/src/views/Snv/Exploration/Rqdm/PageContent/tabs/Variants/index.module.scss
+++ b/src/views/Snv/Exploration/Rqdm/PageContent/tabs/Variants/index.module.scss
@@ -31,6 +31,9 @@
   :global(.ant-table-content) {
     height: 100%;
     min-height: 0;
+  }
+
+  :global(.ant-table-content) {
     overflow: scroll;
   }
 
